--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to l
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dr. Norman Borlaug</title>
 </head>
 <body>
     
