--- a/index.html
+++ b/index.html
@@ -6,23 +6,40 @@
 4. Within the #img-div element, you should see an img element with a corresponding id="image"
 5. Within the #img-div element, you should see an element with a corresponding id="img-caption" that contains textual content describing the image shown in #img-div
 6. You should see an element with a corresponding id="tribute-info", which contains textual content describing the subject of the tribute page
+
 7. You should see an a element with a corresponding id="tribute-link", which links to an outside site, that contains additional information about the subject of the tribute page. HINT: You must give your element an attribute of target and set it to _blank in order for your link to open in a new tab
 8. Your #image should use max-width and height properties to resize responsively, relative to the width of its parent element, without exceeding its original size
 9. Your img element should be centered within its parent element
 10. Fulfill the user stories and pass all the tests below to complete this project. Give it your own personal style. Happy Coding!
 
 Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to link your stylesheet and apply your CSS
+
+Site example to follow: https://tribute-page.freecodecamp.rocks/
 -->
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dr. Norman Borlaug</title>
 </head>
+
 <body>
-    
+    <main id="main">
+        <h1 id="title">Dr. Norman Borlaug</h1>
+        <p class="sub-title-text">The man who saved a billion lives</p>
+        <div id="img-div">
+            <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt=""/>
+            <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
+        </div>
+        <section id="tribute-info">
+            <h2>Here's a time line of Dr.Borlaug's life:</h2>
+        </section>
+    </main>
 </body>
+
 </html>
